--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -23,6 +23,8 @@
   <string name="preference_performance_block_webfonts_summary">Puede hacer que falten iconos o imágenes</string>
   <string name="preference_mozilla_telemetry2">Enviar datos de consumo</string>
   <string name="preference_privacy_notice">Aviso de privacidad</string>
+  <string name="accessibility_announcement_loading">Cargando</string>
+  <string name="accessibility_announcement_loading_finished">Página cargada</string>
   <string name="content_description_forward">Ir hacia delante</string>
   <string name="content_description_reload">Recargar página</string>
   <string name="content_description_back">Ir a la página anterior</string>
@@ -33,6 +35,21 @@
   <string name="external_multiple_apps_matched_exit">¿Salir de la navegación privada?</string>
   <string name="errorpage_title">Problema al cargar la página</string>
   <string name="errorpage_refresh">Vuelve a intentarlo</string>
+  <string name="error_connectionfailure_title">No se puede conectar</string>
+  <string name="error_connectionfailure_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n        \""<li>Puede que el sitio est&amp;#233; ocupado o no est&amp;#233; disponible temporalmente. Vuelve a intentarlo en unos minutos.</li>"\"\\n        \""<li>Si no puedes cargar ninguna p&amp;#225;gina, comprueba la conexi&amp;#243;n de datos o Wi-Fi de tu dispositivo.</li>"\"\\n      \""</ul>]]></string>
+  <string name="error_timeout_title">La conexión ha caducado</string>
+  <string name="error_hostLookup_title">Servidor no encontrado</string>
+  <string name="error_hostLookup_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n        \""<li>"\"Comprueba que la direcci&amp;#243;n no tiene ning&amp;#250;n error como\\n          \""<strong>ww</strong>"\".example.com en vez de\\n          \""<strong>www</strong>.example.com</li>"\"\\n        \""<li>Si no puedes cargar ninguna p&amp;#225;gina, comprueba la conexi&amp;#243;n de datos o Wi-Fi de tu dispositivo.</li>"\"\\n      \""</ul>]]></string>
+  <string name="error_malformedURI_title">La dirección no es válida</string>
+  <string name="error_malformedURI_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n  \""<li>\"Las direcciones web se suelen escribir as&amp;#237;: \"<strong>http://www.example.com/</strong></li>"\"\\n  \""<li>Aseg&amp;#250;rate de usar las barras oblicuas (<strong>/</strong>).</li>\\n</ul>]]></string>
+  <string name="error_redirectLoop_title">La página no se está redireccionando adecuadamente</string>
+  <string name="error_redirectLoop_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n  \""<li>A veces, el problema se produce por desactivar o no aceptar el uso de cookies.</li>\\n</ul>]]></string>
+  <string name="error_unsupportedprotocol_title">No se entiende la dirección</string>
+  <string name="error_unsupportedprotocol_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n  \""<li>Puede que necesites instalar otro software para abrir esta direcci&amp;#243;n.</li>\\n</ul>]]></string>
+  <string name="error_sslhandshake_title">Fallo en la conexión segura</string>
+  <string name="error_sslhandshake_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n  \""<li>Puede que haya un problema con la configuraci&amp;#243;n del servidor o puede\\nque alguien est&amp;#233; intentando suplantar al servidor.</li>"\"\\n  \""<li>Si ya te hab&amp;#237;as conectado antes a este servidor sin problemas, puede que el error\\nsea temporal y puedes intentarlo m&amp;#225;s tarde.</li>\\n</ul>]]></string>
+  <string name="error_generic_title">Ups</string>
+  <string name="error_generic_message">Por alguna razón, no podemos cargar esta página.</string>
   <string name="your_rights">Tus derechos</string>
   <string name="your_rights_content1">%1$s es software de código abierto y gratuito, creado por Mozilla y otros colaboradores.</string>
   <string name="your_rights_content2"><![CDATA[\"%1$s está disponible de acuerdo con los términos de la \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Licencia p&amp;#250;blica de Mozilla</a>\" y otras licencias de código abierto.\"]]></string>
@@ -42,14 +59,22 @@
   <string name="settings_cookies_dialog_title">Limpiar todas las cookies y datos del sitio</string>
   <string name="settings_cookies_dialog_content2">Esta acción eliminará todas las cookies y los datos de sitios. Eliminar esta información puede cerrar tu sesión de algunos sitios web y borrar el contenido web almacenado sin conexión.</string>
   <string name="turbo_mode">Modo turbo</string>
+  <string name="turbo_mode_enabled_toast">Se activó el modo Turbo</string>
+  <string name="turbo_mode_disabled_toast">Se desactivó el modo Turbo</string>
   <string name="onboarding_turbo_mode_title">El modo turbo te ayuda a navegar más rápido</string>
   <string name="onboarding_turbo_mode_body2">El modo turbo bloquea automáticamente anuncios y rastreadores.\nSi un sitio no funciona como esperas, prueba a desactivarlo.</string>
   <string name="button_turbo_mode_keep_enabled2">Mantener activado el modo turbo</string>
   <string name="button_turbo_mode_turn_off2">Desactivar el modo turbo</string>
+  <string name="turbo_mode_disable_a11y">Desactivar el modo turbo</string>
+  <string name="turbo_mode_enable_a11y">Activar el modo turbo</string>
   <string name="turbo_mode_image_a11y">Ejemplo con el modo turbo activado</string>
   <string name="homescreen_unpin_tutorial_toast">Mantén presionado SELECT para desanclarlo de la pantalla de inicio</string>
   <string name="homescreen_tile_remove">Eliminar</string>
+  <string name="homescreen_unpin_a11y">Soltar</string>
+  <string name="homescreen_title">Pantalla de inicio</string>
   <string name="pin_label">Fijar a la pantalla inicio</string>
+  <string name="notification_pinned_general2">Se fijó %1$s a la pantalla de inicio</string>
+  <string name="notification_unpinned_general2">Se eliminó %1$s de la pantalla de inicio</string>
   <string name="notification_pinned_site">FIjar a la pantalla de inicio de Firefox TV</string>
   <string name="notification_unpinned_site">Eliminar de la pantalla de inicio de Firefox TV</string>
   <string name="pocket_home_tutorial_title">Presentando vídeos recomendados por %1$s</string>
@@ -60,8 +85,15 @@
   <string name="pocket_video_feed_recommended_videos_title">Videos recomendados</string>
   <string name="pocket_video_feed_failed_to_load">Umm. Estamos teniendo problemas para visualizar los videos recomendados por %1$s.</string>
   <string name="pocket_video_feed_reload_button">Volver a intentarlo</string>
+  <string name="pocket_video_feed_a11y_navigation">Usar izquierda y derecha para moverse entre los videos</string>
+  <string name="pocket_video_feed_a11y_feed_item_focused">%1$s de %2$s</string>
+  <string name="google_search_tile_title">Buscar con Google</string>
+  <string name="google_search_hint_text">Buscar con Google o introducir la dirección</string>
+  <string name="blank_tile_title">Añadir un sitio web</string>
+  <string name="dialog_clear_cookies_title">¿Limpiar cookies?</string>
   <string name="request_desktop_site_a11y">Pedir la versión de escritorio del sitio</string>
   <string name="notification_request_desktop_site">Se ha pedido la versión de escritorio</string>
   <string name="notification_request_non_desktop_site">Se vuelve a la versión predeterminada</string>
   <string name="youtube_casting_onboarding_toast">Transmite vídeos de YouTube desde tu móvil o tableta. Abre YouTube en tu dispositivo y pulsa %s para comenzar.</string>
+  <string name="fullscreen_toast_pinch_to_exit">Reduce con dos dedos para salir de pantalla completa</string>
 </resources>
